--- a/src/index.html
+++ b/src/index.html
@@ -37,9 +37,10 @@
     </div>
 </nav>
 
-
-<section id="welcome-section" class="d-flex justify-content-start align-items-center">
-    <div class="container position-relative">
+<!--<section id="welcome-section" class="d-flex justify-content-start align-items-center">-->
+<!--    <div class="container position-relative">-->
+<section id="welcome-section" class="full-height-section text-center">
+    <div class="container">
         <h1>Welcome to </h1>
         <h1>Easkey Glamping Village</h1>
     </div>
@@ -47,22 +48,26 @@
 
 
 <!-- About Section -->
-<section id="about-section" class="d-flex justify-content-start align-items-center">
-    <div class="container position-relative">
+<section id="about-section" class="full-height-section text-center">
+    <div class="container">
         <div class="row">
             <div class="col-8">
                 <h2>About Easkey Glamping Village</h2>
                 <p>
-                    Welcome to the enchanting world of Easkey Glamping Village, where nature's embrace meets luxury and
+                    Welcome to the enchanting world of Easkey Glamping Village, where nature's embrace meets luxury
+                    and
                     comfort. <br>
-                    Nestled in the heart of Easkey, this hidden gem offers a unique retreat for those seeking a perfect
+                    Nestled in the heart of Easkey, this hidden gem offers a unique retreat for those seeking a
+                    perfect
                     blend of tranquility and adventure. <br>
                     Imagine waking up to the gentle rustle of leaves, surrounded by lush greenery and the soothing
                     sounds of nature. <br>
-                    Easkey Glamping Village invites you to step away from the ordinary and immerse yourself in a world
+                    Easkey Glamping Village invites you to step away from the ordinary and immerse yourself in a
+                    world
                     where stylish accommodations harmonize with the great outdoors. <br>
                     Whether you're a surfer, an adventure seeker, or someone simply longing for a peaceful escape,
-                    Easkey Glamping Village promises an unforgettable experience that transcends the traditional camping
+                    Easkey Glamping Village promises an unforgettable experience that transcends the traditional
+                    camping
                     getaway. <br>
                     Join us on a journey where every moment is a celebration of the beauty that surrounds us.
                 </p>
@@ -75,17 +80,21 @@
 </section>
 
 <!-- Easkey Section -->
-<section id="the-area">
+<section id="the-area" class="full-height-section text-center">
     <div class="container">
         <div class="row">
             <div class="col-8">
-                <h2>The Area</h2>
+                <h2>Local Area</h2>
                 <p>
-                    Easkey is a charming village located in County Sligo, Ireland, renowned for its captivating coastal
-                    scenery, rich cultural heritage, and outdoor recreational opportunities in particular surfing.<br>
-                    Situated along the Wild Atlantic Way, Easkey offers breathtaking views of the Atlantic Ocean and is
+                    Easkey is a charming village located in County Sligo, Ireland, renowned for its captivating
+                    coastal
+                    scenery, rich cultural heritage, and outdoor recreational opportunities in particular
+                    surfing.<br>
+                    Situated along the Wild Atlantic Way, Easkey offers breathtaking views of the Atlantic Ocean and
+                    is
                     known for its picturesque beaches and rugged cliffs.<br>
-                    The village itself is steeped in history, with ancient ruins and landmarks that tell tales of its
+                    The village itself is steeped in history, with ancient ruins and landmarks that tell tales of
+                    its
                     past.
                 </p>
 
@@ -98,11 +107,13 @@
 
                 <p>
                     Beyond its coastal allure, Easkey is a welcoming community with traditional Irish charm.<br>
-                    Visitors can explore local pubs, interact with friendly locals, and experience the warm hospitality
+                    Visitors can explore local pubs, interact with friendly locals, and experience the warm
+                    hospitality
                     that characterizes the village.<br>
                     Easkey provides a tranquil escape for those looking to connect with nature, embrace outdoor
                     activities, and immerse themselves in the unique culture of County Sligo.<br>
-                    Whether you're drawn to the waves, the historical sites, or the peaceful ambiance, Easkey promises a
+                    Whether you're drawn to the waves, the historical sites, or the peaceful ambiance, Easkey
+                    promises a
                     memorable and rejuvenating experience along the scenic west coast of Ireland.
                 </p>
             </div>
@@ -115,43 +126,58 @@
 </section>
 
 <!-- Contact -->
-<section id="contact" class="d-flex justify-content-start align-items-center">
-    <div class="container position-relative">
-        <div class="row" id="contact-heading">
-            <h1>Make a booking today</h1>
-            <p>Contact us to secure your spot!</p>
-            <p>Reach out to our team directly for a seamless reservation experience.</p>
-        </div>
-        <div class="row mt-5">
+<section id="contact" class="full-height-section text-center">
+    <div class="container" id="contact-container">
+            <div class="row" id="contact-heading">
+                <h1>Make a booking today</h1>
+                <p>Contact us to secure your spot!</p>
+                <p>Reach out to our team directly for a seamless reservation experience.</p>
+            </div>
+            <div class="row mt-5">
 
-            <div class="col-lg-4">
-                <div class="email">
-                    <h4>Email:</h4>
-                    <a href="mailto: easkeyglampingvillage@gmail.com">easkeyglampingvillage@gmail.com</a>
-                </div>
+                <div class="col-lg-4">
+                    <div class="email">
+                        <h4>Email:</h4>
+                        <a href="mailto: easkeyglampingvillage@gmail.com">easkeyglampingvillage@gmail.com</a>
+                    </div>
 
-                <div class="phone">
-                    <h4>Call Padraig:</h4>
-                    <p>+353 87 285 3064</p>
-                </div>
+                    <div class="phone">
+                        <h4>Call Padraig:</h4>
+                        <p>+353 87 285 3064</p>
+                    </div>
 
-                <div class="address">
-                    <h4>Location:</h4>
-                    <p>Keadue,</p>
-                    <p>Easky</p>
-                    <p>Co. Sligo</p>
-                    <p>F26 YR53</p>
+                    <div class="address">
+                        <h4>Location:</h4>
+                        <p>Keadue,</p>
+                        <p>Easky</p>
+                        <p>Co. Sligo</p>
+                        <p>F26 YR53</p>
+                    </div>
+
                 </div>
 
             </div>
-
         </div>
-    </div>
 </section>
 
-<!-- Bootstrap JS and Popper.js (for Bootstrap functionality) -->
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
+
+<script src="https://static.app/js/static.js" type="text/javascript"></script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var navLinks = document.querySelectorAll('.nav-link');
+
+    navLinks.forEach(function (link) {
+      link.addEventListener('click', function () {
+        var navbarCollapse = document.querySelector('.navbar-collapse');
+        navbarCollapse.classList.remove('show');
+      });
+    });
+  });
+</script>
 </body>
 
 </html>
